Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObject.quorum
class Main
    action Main
        Object v
    integer t = 5
        v:SetValue(5)
        Test(v)
    end

    action Test(integer var)
    end
end
